--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
 <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+
+
+        android:name="com.practicum.playlistmaker.appSettings.App"
+
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
