--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,28 @@
 /build
+# Windows thumbnail cache files
+ Thumbs.db
+ Thumbs.db:encryptable
+ ehthumbs.db
+ ehthumbs_vista.db
+
+ scratch.kts
+ scratch_1.java
+
+ # Dump file
+ *.stackdump
+
+ # Folder config file
+ [Dd]esktop.ini
+
+ # Recycle Bin used on file shares
+ $RECYCLE.BIN/
+
+ # Windows Installer files
+ *.cab
+ *.msi
+ *.msix
+ *.msm
+ *.msp
+
+ # Windows shortcuts
+ *.lnk
